<resources>
    <string name="app_name">Attention!</string>
    <string name="action_settings">Settings</string>
    <string name="done">Done</string>
    <string name="pfp_description">Profile photo for %1$s</string>
    <string name="your_pfp_description">Your profile photo</string>
    <string name="username">Username</string>
    <string name="no_username">Not found</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="password">Password</string>
    <string name="passwords_match">Passwords match</string>
    <string name="passwords_different">Passwords don\'t match</string>
    <string name="read">Read</string>
    <string name="sent">Sent</string>
    <string name="delivered">Delivered</string>
    <string name="sending">Sending…</string>
    <string name="send_error">An error occurred</string>
    <string name="disconnected">Connection error</string>
    <string name="empty_username">Username cannot be empty</string>
    <string name="nonexistent_username">No user with that username exists</string>
    <string name="add_friend_failed">Could not add friend - username may not exist or you
        may already be friends with them</string>
    <string name="edit_friend_name_failed">An error occurred when editing your friend\'s
        name</string>
    <string name="create_user">Create account</string>
    <string name="login">Log in</string>
    <string name="create_user_title">Create Account</string>
    <string name="choose_username_title">Choose Username</string>
    <string name="change_password_title">Change Password</string>
    <string name="link_account_title">Link Google Account</string>
    <string name="link_account_warning">Warning: this cannot be undone</string>
    <string name="login_title">Log In</string>
    <string name="sign_in_w_google">Sign in with Google</string>
    <string name="google_logo">Google logo</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="choose_username">Choose username</string>
    <string name="tos_agree">I have read and agree to the <annotation url="tos">terms of service</annotation></string>
    <string name="wrong_password">Incorrect username or password</string>
    <string name="google_sign_in_failed">Unable to log in with Google</string>
    <string name="password_validation_failed">Password must be at least 8 characters</string>
    <string name="password_verification_failed">Couldn\'t verify old password. Please login
    again and then try changing your password</string>
    <string name="rate_limited">Too many requests. Please try again later</string>
    <string name="mysterious_password_change_login_issue">"An unusual error occurred when attempting to change your password. This could be a server-side error or a result of on-device data being corrupted and, unfortunately, we aren't sure what your password is now. Try logging in with your new password and if that doesn't work, your old password. You can also contact Aracro Products at support@aracroproducts.com for help with getting back into your account. We apologize for the inconvenience."</string>
    <string name="password_updated">Password was updated successfully</string>
    <string name="username_in_use">Username is taken</string>
    <string name="invalid_email">Email is invalid. Enter a valid email or leave blank</string>
    <string name="email_in_use">Email is in use by another account</string>
    <string name="invalid_username">Enter a valid username. This value may contain only English         letters, numbers, and @/./+/-/_ characters.</string>
    <string name="invalid_photo">Invalid photo. Photo should be less than 20 MB and a valid
    image format</string>
    <string name="photo_too_large">Photo is too large (must not exceed 179 megapixels)</string>
    <string name="account">Account</string>
    <string name="no_friends">You don\'t have any friends - use the \'+🧑‍🚀\' button to add
        some!</string>
    <string name="connection_error">Unable to connect to the server. Check your internet
        connection and try again</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="server_error">The server encountered an error. Please be patient as we
        work to fix it</string>
    <string name="upload_pfp">Upload Profile Photo</string>
    <string name="sharing">Sharing data; tap \"add message\" on a friend to edit and send</string>
    <string name="saving">Saving…</string>
    <string name="uploading">Uploading…</string>
    <string name="processing">Processing file…</string>
    <string name="no_file">File not found. Please try again</string>
    <string name="upload_failed">Unable to upload: %1$s</string>
    <string name="retry">Retry</string>
    <string name="saved">Saved</string>
    <string name="uploaded">Image was successfully uploaded</string>
    <string name="share">Share</string>
    <string name="share_text">Add me on Attention!         https://attention.aracroproducts.com/app/add?username=%s</string>
    <string name="name">Full name</string>
    <string name="placeholder_name">Name…</string>
    <string name="confirm_alert">Send notification</string>
    <string name="add_message">Add message</string>
    <string name="message_hint">Enter message…</string>
    <string name="message_label">Custom message to %s</string>
    <string name="invalid_float">Please enter a valid number</string>
    <string name="alert_sent">Successfully sent alert</string>
    <string name="reply">Reply</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="alert_failed">Failed to send</string>
    <string name="alert_failed_signed_out">Please log in again to send</string>
    <string name="alert_failed_not_friend">Could not send alert because you are not %s\'s
        friend</string>
    <string name="alert_failed_no_user">Could not send alert to %s because the user does not
        exist (refresh and try again)</string>
    <string name="alert_rate_limited">You have sent too many messages. Please wait a few         seconds and tap to try again</string>
    <string name="alert_failed_bad_request">An error occurred while sending an alert to %s</string>
    <string name="alert_failed_server_error">The server encountered an error while sending an alert to %s</string>
    <string name="alert_failed_no_connection">Could not send alert %s. Check your network
        connection and try again</string>
    <string name="could_not_ring">Could not ring device as Attention! does not
        have permission to change Do Not Disturb state</string>
    <string name="user_registered">Your device has been registered!</string>
    <string name="default_message">%s wants your attention!</string>
    <string name="message_prefix">%1$s says: %2$s</string>
    <string name="seconds_ago">%1$d s ago</string>
    <string name="minutes_ago">%1$d m ago</string>
    <string name="sent_at">Sent at %1$s</string>
    <string name="sent_on">Sent %1$s</string>
    <string name="silence">Silence</string>
    <string name="bad_add_link">Invalid link</string>
    <string name="confirm_logout_title">Logout</string>
    <string name="confirm_logout_message">Are you sure you want to log out?</string>
    <string name="allow_dnd_title">Allow Attention! to control Do Not Disturb</string>
    <string name="allow_dnd_message">To enable Attention to override Do Not Disturb, you
        need to grant permission in settings.</string>
    <string name="confirm_delete_title">Delete friend</string>
    <string name="confirm_delete_message">Are you sure you want to remove %s from your friends?</string>
    <string name="add_friend">Add new friend</string>
    <string name="link_account">Link Google Account</string>
    <string name="google_account_in_use">There is already a user with this Google account</string>
    <string name="bad_google_token">Invalid Google token</string>
    <string name="friend_card_click_label">choose from alert options</string>
    <string name="friend_card_long_click_label">edit or remove friend</string>
    <string name="delete">Delete</string>
    <string name="rename">Change name</string>
    <string name="new_name">Enter new name</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="ignore">Ignore</string>
    <string name="accept">Accept</string>
    <string name="block">Block</string>
    <string name="pending_friend_header">Pending friend requests</string>
    <string name="pending_friend_card_click_label">respond to friend request</string>
    <string name="friend_request_notification_title">Friend request from %s</string>
    <string name="friend_request_notification_body">%1$s (%2$s) wants to be your friend!</string>
    <string name="channel_name">Missed alerts</string>
    <string name="channel_description">Notifies you when you missed an alert</string>
    <string name="alert_failed_channel_name">Sending errors</string>
    <string name="alert_failed_channel_description">Notifies you when an alert failed to send</string>
    <string name="notification_title">Missed alert from %s</string>
    <string name="alert_notification_title">Alert from %s</string>
    <string name="alert_channel_name">Alerts</string>
    <string name="alert_channel_description">Notifies you of new alerts</string>
    <string name="service_channel_name">Sending message</string>
    <string name="service_channel_description">Indicates that an alert is being sent</string>
    <string name="friend_service_channel_name">Handling friend request</string>
    <string name="friend_service_channel_description">Indicates that a response to a friend request is being processed</string>
    <string name="friend_request_channel_name">Friend requests</string>
    <string name="friend_request_channel_description">Notifies you when someone adds you as a friend</string>
    <string name="draw_title">Allow Attention! to draw overlays?</string>
    <string name="draw_message">This is required to show alerts while your device is in use. To enable it, open settings</string>
    <string name="open_settings">Open settings</string>
    <string name="do_not_ask_again">Do not ask again</string>
    <string name="msg_token_fmt" translatable="false">Generated token: %s</string>
    <string name="no_play_services">No Google Play Services were found on your device</string>
    <string name="notifications_title">Notifications</string>
    <string name="override_dnd">Override Do Not Disturb</string>
    <string name="override_summary_off">Alerts won\'t be shown when Do Not Disturb is on</string>
    <string name="override_summary_on">Alerts will be shown even when Do Not Disturb is on</string>
    <string name="vibrate_preference">Vibrate when device is set to:</string>
    <string name="ring_preference">Ring when device is set to:</string>
    <string name="override_dnd_key" translatable="false">com.aracroproducts.attention.key.override_dnd</string>
    <string name="ring_preference_key" translatable="false">com.aracroproducts.attention.key.ring</string>
    <string name="vibrate_preference_key" translatable="false">com.aracroproducts.attention.key.vibrate</string>
    <string name="username_key" translatable="false">com.aracroproducts.attention.key.username</string>
    <string name="email_key" translatable="false">com.aracroproducts.attention.key.email</string>
    <string name="first_name_key" translatable="false">com.aracroproducts.attention.key
        .first_name</string>
    <string name="last_name_key" translatable="false">com.aracroproducts.attention.key
        .last_name</string>
</resources>