<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:iconSpaceReserved="false"
    app:iconSpaceReserved="false"
    tools:targetApi="o">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/account">
        <EditTextPreference
            android:id="@+id/show_username_preference"
            android:enabled="false"
            android:key="@string/username_key"
            android:title="@string/username" />

        <EditTextPreference
            android:id="@+id/email_preference"
            android:key="@string/email_key"
            android:title="@string/email" />

        <EditTextPreference
            android:id="@+id/first_name_preference"
            android:key="@string/first_name_key"
            android:title="@string/first_name" />

        <EditTextPreference
            android:id="@+id/last_name_preference"
            android:key="@string/last_name_key"
            android:title="@string/last_name" />

        <Preference
            android:persistent="false"
            android:title="@string/password" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/notifications_title">
        <MultiSelectListPreference
            android:id="@+id/vibrate_preference"
            android:entries="@array/notification_entries"
            android:entryValues="@array/notification_values"
            android:key="@string/vibrate_preference_key"
            android:title="@string/vibrate_preference"
            app:iconSpaceReserved="false" />
        <MultiSelectListPreference
            android:id="@+id/ring_preference"
            android:entries="@array/notification_entries"
            android:entryValues="@array/notification_values"
            android:key="@string/ring_preference_key"
            android:title="@string/ring_preference"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/override_dnd_key"
            android:title="@string/override_dnd"
            app:iconSpaceReserved="false"
            app:summaryOff="@string/override_summary_off"
            app:summaryOn="@string/override_summary_on" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/user_title">
        <EditTextPreference
            android:key="@string/name_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/display_name"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>